# GameServerVendingMachine

./: .gitignore  README.md
games/minecraft/: config.yaml
gsv_bot/: Cargo.toml
gsv_bot/src/: bot.rs  main.rs
gsv_bot/src/commands/: control.rs  mod.rs
gsv_bot/src/games/: game_server.rs  mod.rs
gsv_bot/src/games/minecraft/: mod.rs
gsv_bot/src/utils/: logger.rs
gsv_orchestrator/: Cargo.toml
gsv_orchestrator/src/: main.rs
infra/k8s/base/: namespace.yaml  rbac.yaml
